[package]
name = "twitter_image_downloader"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread","macros", "fs"] }
egg-mode = { version = "0.16", features = ["rustls"], default-features = false }
clap = "2"
indicatif = "0.16"
reqwest = "0.11"
futures = "0.3"
url = "2"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
